# derks-backlog

./: .gitignore  .~lock.game_log.csv#  backlog.csv  backlog.sql  dashboard.ipynb  data.py  elo.py  env.txt  env.yaml  game_log.csv  games.db  input.sql  log.sql  model.ipynb  pyproject.toml  rating.py  rec_log.csv  series_adj.sql  sheets.py  simple_log.csv  steam_library.csv
model/: core.py  elasticnet.py  linear_svr.py  model.py  pytabkit.py  rbf.py  ridge.py  series.py  stacking.py  xgb.py
model/model_results/: elasticnet_search.csv  linear_svr_search.csv  rbf_search.csv  ridge_search.csv  stacking_cv.joblib  xgb_best_params.joblib  xgb_search.csv
model/model_results - Copy/: elasticnet_search.csv  linear_svr_search.csv  rbf_search.csv  ridge_search.csv  stacking_cv.joblib  xgb_search.csv
model/models/: elasticnet_model.joblib  ens_model.joblib  ens_model2.joblib  ens_model3.joblib  linear_svr_model.joblib  rbf_model.joblib  ridge_model.joblib  stacking_model.joblib  svr_model.joblib  xgb_model.joblib  xgb_model1.joblib  xgb_model2.joblib  xgb_model3.joblib  xgb_modelGenres.joblib
