[project]
name = "derks-backlog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "howlongtobeatpy>=1.0.18",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pytabkit[models]>=1.6.1",
    "python-levenshtein>=0.27.1",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "torch",
]

[[tool.uv.index]]
name = 'pytorch-cu128'
url = 'https://download.pytorch.org/whl/cu128'
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
